--- a/assets/witchercore/lang/ru_RU.lang
+++ b/assets/witchercore/lang/ru_RU.lang
@@ -1,12 +1,3 @@
-itemGroup.tabWC=WC: Разное
-itemGroup.tabSwordSilver=WC: Серебряные мечи
-itemGroup.tabSwordSteel=WC: Стальные мечи
-itemGroup.tabWCArmor=WC: Броня
-itemGroup.tabWCMaterial=WC: Материалы
-itemGroup.tabWCFood=WC: Еда
-itemGroup.tabWCDrink=WC: Напитки
-itemGroup.tabWCBlock=WC: Блоки
-itemGroup.tabWCMoney=WC: Деньги
 rarity.usual=&fПростой предмет
 rarity.uncommon=&9Необычный предмет
 rarity.rare=&eРедкий предмет
@@ -20,6 +11,9 @@ desc.weight=&nВес:
 desc.sword.silver=&6Серебряный меч
 desc.sword.steel=&6Стальной меч
 desc.durability=&nСостояние:
+desc.repairing.menu=&7'Ctrl + ЛКМ' для меню ремонта
+desc.money.key1='Ctrl + ЛКМ' для разделения денег
+desc.money.key2='Shift + ЛКМ' для объединения денег
 gui.saturation=&eСытость:
 gui.nickname=Имя:
 gui.health=Здоровье:
@@ -32,168 +26,162 @@ key.hotslot.3=Слот снаряжения #3
 key.hotslot.4=Слот снаряжения #4
 key.usesign=Использовать знак
 key.questlist=Список заданий
-item.witchercore_9801CHESTPLATE.name=Доспех школы Медведя
-item.witchercore_9801GLOVES.name=Перчатки школы Медведя
-item.witchercore_9801PANTS.name=Штаны школы Медведя
-item.witchercore_9801BOOTS.name=Сапоги школы Медведя
-item.witchercore_9801CHESTPLATE2.name=Улучшенный Доспех школы Медведя
-item.witchercore_9801GLOVES2.name=Улучшенные Перчатки школы Медведя
-item.witchercore_9801PANTS2.name=Улучшенные Штаны школы Медведя
-item.witchercore_9801BOOTS2.name=Улучшенные Сапоги школы Медведя
-item.witchercore_9802CHESTPLATE.name=Доспех школы Коты
-item.witchercore_9802GLOVES.name=Перчатки школы Кота
-item.witchercore_9802PANTS.name=Штаны школы Кота
-item.witchercore_9802BOOTS.name=Сапоги школы Кота
-item.witchercore_9803CHESTPLATE.name=Доспех школы Грифона
-item.witchercore_9803GLOVES.name=Перчатки школы Грифона
-item.witchercore_9803PANTS.name=Штаны школы Грифона
-item.witchercore_9803BOOTS.name=Сапоги школы Грифона
-item.witchercore_9804CHESTPLATE.name=Доспех школы Волка
-item.witchercore_9804GLOVES.name=Перчатки школы Волка
-item.witchercore_9804PANTS.name=Штаны школы Волка
-item.witchercore_9804BOOTS.name=Сапоги школы Волка
-item.witchercore_9805CHESTPLATE.name=Доспех Темерской Стражи
-item.witchercore_9805GLOVES.name=Перчатки Темерской Стражи
-item.witchercore_9805PANTS.name=Штаны Темерской Стражи
-item.witchercore_9805BOOTS.name=Сапоги Темерской Стражи
-item.witchercore_9806CHESTPLATE.name=Доспех школы Змеи
-item.witchercore_9806GLOVES.name=Перчатки школы Змеи
-item.witchercore_9806PANTS.name=Штаны школы Змеи
-item.witchercore_9806BOOTS.name=Сапоги школы Змеи
-item.witchercore_9807CHESTPLATE.name=Тальгарский Доспех
-item.witchercore_9807GLOVES.name=Тальгарские Перчатки
-item.witchercore_9807PANTS.name=Тальгарские Штаны
-item.witchercore_9807BOOTS.name=Тальгарские Сапоги
-item.witchercore_9808CHESTPLATE.name=Доспех из Каер Морхена
-item.witchercore_9808GLOVES.name=Охотничьи Перчатки
-item.witchercore_9808PANTS.name=Охотничьи Штаны
-item.witchercore_9808BOOTS.name=Охотничьи Сапоги
-item.witchercore_ALEBARDISTCHESTPLATE.name=Диспех Темерского Алебардиста
-item.witchercore_ELLANDERCHESTPLATE.name=Элландерская Кираса
-item.witchercore_REDANCAVALRYMANCHESTPLATE.name=Доспех Реданского Кавалериста
-item.witchercore_HINDARSFJALLCHESTPLATE.name=Доспех с Хиндарсфьялла
-item.witchercore_CIDARIANCAVALRYMANCHESTPLATE.name=Доспех Цидарийского Кавалериста
-item.witchercore_INFANTRYCHESTPLATE.name=Бригантина Грёбаной Пехтуры
-item.witchercore_CIDARIANCHESTPLATE.name=Цидарийский Комбенезон
-item.witchercore_TEMERARMYPANTS.name=Темерские Армейские Штаны
-item.witchercore_LEATHERPANTS.name=Кожаные Штаны
-item.witchercore_CIDARIANARMYPANTS.name=Цидарийские Армейские Штаны
-item.witchercore_CLOTH.name=Рубашка
-item.witchercore_.name=
-item.witchercore_9801STEEL1.name=Стальной меч школы Медведя
-item.witchercore_9801STEEL2.name=Улучшенный стальной меч школы Медведя
-item.witchercore_9801STEEL3.name=Отличный стальной меч школы Медведя
-item.witchercore_9801STEEL4.name=Мастерской стальной меч школы Медведя 
-item.witchercore_9803STEEL1.name=Стальной меч школы Грифона
-item.witchercore_9803STEEL2.name=Улучшенный стальной меч школы Грифона
-item.witchercore_9803STEEL3.name=Отличный стальной меч школы Грифона
-item.witchercore_9803STEEL4.name=Мастерской стальной меч школы Грифона
-item.witchercore_9804STEEL1.name=Стальной меч школы Волка
-item.witchercore_9804STEEL2.name=Улучшенный стальной меч школы Волка
-item.witchercore_9804STEEL3.name=Отличный стальной меч школы Волка
-item.witchercore_9804STEEL4.name=Мастерской стальной меч школы Волка
-item.witchercore_9805STEEL1.name=Веленский меч
-item.witchercore_9805STEEL2.name=Темерский армейский меч
-item.witchercore_9805STEEL3.name=Веленский длинный меч
-item.witchercore_9809STEEL1.name=Нильфгаардский длинный меч
-item.witchercore_9809STEEL2.name=Столичный нильфгардский меч
-item.witchercore_MAHAKAM2.name=Мастерской махакамский сигиль
-item.witchercore_MAHAKAM1.name=Махакамский сигиль
-item.witchercore_ELVIN.name=Эльфийский клинок
-item.witchercore_VENGERBERG.name=Венгерберский длинный меч
-item.witchercore_AEDIRN.name=Аэдирнский длинный меч
-item.witchercore_MARIBOR.name=Меч из Марибора
-item.witchercore_IRONY.name=Железный меч
-item.witchercore_NOVIGRAD1.name=Меч из Новиграда
-item.witchercore_NOVIGRAD2.name=Новиградский длинный меч
-item.witchercore_NOVIGRAD3.name=Новиградский армейский меч
-item.witchercore_ELLANDER.name=Меч из Элландера
-item.witchercore_OFIR.name=Офирский меч
-item.witchercore_RUSTYELVIN.name=Ржавый эльфийский клинок
-item.witchercore_WITCHERYSTEEL.name=Ведьмачий стальной меч
-item.witchercore_NAZAIR.name=Клинок из Назаира
-item.witchercore_VIKOVARO.name=Клинок из Виковаро
-item.witchercore_OLDEST.name=Старинный меч
-item.witchercore_RUSTY.name=Ржавый меч
-item.witchercore_DEVINE.name=Девиан
-item.witchercore_OLDESTELVIN.name=Древний Эльфийский клинок
-item.witchercore_HARDENED.name=Закалённый стальной меч
-item.witchercore_9801SILVER1.name=Серебряный меч школы Медведя
-item.witchercore_9801SILVER2.name=Улучшенный серебряный меч школы Медведя
-item.witchercore_9801SILVER3.name=Отличный серебряный меч школы Медведя
-item.witchercore_9801SILVER4.name=Мастерской серебряный меч школы Медведя
-item.witchercore_9802SILVER1.name=Серебряный меч школы Кота
-item.witchercore_9802SILVER2.name=Улучшенный серебряный меч школы Кота
-item.witchercore_9802SILVER3.name=Отличный серебряный меч школы Кота
-item.witchercore_9802SILVER4.name=Мастерской серебряный меч школы Кота
-item.witchercore_9803SILVER1.name=Серебряный меч школы Грифона
-item.witchercore_9803SILVER2.name=Улучшенный серебряный меч школы Грифона
-item.witchercore_9803SILVER3.name=Отличный серебряный меч школы Грифона
-item.witchercore_9803SILVER4.name=Мастерской серебряный меч школы Грифона
-item.witchercore_9804SILVER1.name=Серебряный меч школы Волка
-item.witchercore_9804SILVER2.name=Улучшенный серебряный меч школы Волка
-item.witchercore_9804SILVER3.name=Отличный серебряный меч школы Волка
-item.witchercore_9804SILVER4.name=Мастерской серебряный меч школы Волка
-item.witchercore_DEITHWEN.name=Deithwen
-item.witchercore_SILVER2.name=Торлунн
-item.witchercore_CLAW.name=Судьба
-item.witchercore_AZUREANGER.name=Лазурный гнев
-item.witchercore_PHOENIX.name=Феникс
-item.witchercore_GVIHIR.name=Монстробой
-item.witchercore_GARHWAL.name=Гарваль
-item.witchercore_EMMENTAL.name=Эмменталь
-item.witchercore_ERLICHRAD.name=Эрлерхалрд
-item.witchercore_SILVER1.name=Посеребрённый меч
-item.witchercore_WITCHERYSILVER.name=Ведьмачий серебряный меч
-item.witchercore_TLAREG.name=Рингил
-item.witchercore_DISGLAIR.name=Дисглаир
-item.witchercore_GVENNEL.name=Гвен`нэль
-item.witchercore_ZIRAEL.name=Зираэль
-item.witchercore_ADDANDEIDTH.name=Addan Deidth
-item.witchercore_OREN.name=Темерский орен
-item.witchercore_KRONE.name=Крона
-item.witchercore_DUCAT.name=Аэдирнский дукат
-item.witchercore_SILVER.name=Серебро 1G
-item.witchercore_GOLD.name=Золото 1G
-item.witchercore_RAWMEAT1.name=Сырая свинина
-item.witchercore_RAWMEAT2.name=Сырая говядина
-item.witchercore_RAWFISH1.name=Сырой окунь
-item.witchercore_WATER.name=Вода
-item.witchercore_APPLEJUICE.name=Яблочный сок
-item.witchercore_MORS.name=Морс
-item.witchercore_PEPPER.name=Перец
-item.witchercore_APPLE1.name=Яблоко
-item.witchercore_HONEYCOMB.name=Медовые соты
-item.witchercore_EGG1.name=Яйцо
-item.witchercore_MEATSANDWICH1.name=Бутерброд с бужениной
-item.witchercore_BREAD1.name=Половина хлебца
-item.witchercore_BLUEBERRIES.name=Корзина черники
-item.witchercore_DRIEDFRUITS1.name=Унция сухофруктов
-item.witchercore_GRAPES.name=Гвоздь винограда
-item.witchercore_GOATMILK.name=Козье молоко
-item.witchercore_BREAD2.name=Свежая паляница
-item.witchercore_MEAT1.name=Цыплячья ножка
-item.witchercore_MEAT2.name=Ножка индейки
-item.witchercore_FISH1.name=Филе лосося
-item.witchercore_GOULASH.name=Гуляш
-item.witchercore_MELON.name=Дыня
-item.witchercore_MEAT3.name=Говяжья вырезка
-item.witchercore_MEAT4.name=Свиная отбивная
-item.witchercore_MEAT5.name=Жареный цыплёнок
-item.witchercore_MEAT6.name=Запечёная индейка
-item.witchercore_FISH2.name=Рыба на углях
-item.witchercore_DRIEDFRUITS2.name=Полфунта сухофруктов
-item.witchercore_WHITEHONEY.name=Белый мед
-item.witchercore_SWALLOW.name=Ласточка
-item.witchercore_GRAMPUS.name=Косатка
-item.witchercore_CAT.name=Кошка
-item.witchercore_THUNDER.name=Гром
-item.witchercore_RAPAIRAKIT1.name=Ремонтный набор ученика-бронника
-item.witchercore_RAPAIRAKIT2.name=Ремонтный набор подмастерья-бронника
-item.witchercore_RAPAIRAKIT3.name=Ремонтный набор мастера-бронника
-item.witchercore_RAPAIRWKIT1.name=Ремонтный набор ученика-оруженийка
-item.witchercore_RAPAIRWKIT2.name=Ремонтный набор подмастерья-оруженийка
-item.witchercore_RAPAIRWKIT3.name=Ремонтный набор мастера-оруженийка
+witchercore_9801CHESTPLATE.name=Доспех школы Медведя
+witchercore_9801GLOVES.name=Перчатки школы Медведя
+witchercore_9801PANTS.name=Штаны школы Медведя
+witchercore_9801BOOTS.name=Сапоги школы Медведя
+witchercore_9801CHESTPLATE2.name=Улучшенный Доспех школы Медведя
+witchercore_9801GLOVES2.name=Улучшенные Перчатки школы Медведя
+witchercore_9801PANTS2.name=Улучшенные Штаны школы Медведя
+witchercore_9801BOOTS2.name=Улучшенные Сапоги школы Медведя
+witchercore_9802CHESTPLATE.name=Доспех школы Коты
+witchercore_9802GLOVES.name=Перчатки школы Кота
+witchercore_9802PANTS.name=Штаны школы Кота
+witchercore_9802BOOTS.name=Сапоги школы Кота
+witchercore_9803CHESTPLATE.name=Доспех школы Грифона
+witchercore_9803GLOVES.name=Перчатки школы Грифона
+witchercore_9803PANTS.name=Штаны школы Грифона
+witchercore_9803BOOTS.name=Сапоги школы Грифона
+witchercore_9804CHESTPLATE.name=Доспех школы Волка
+witchercore_9804GLOVES.name=Перчатки школы Волка
+witchercore_9804PANTS.name=Штаны школы Волка
+witchercore_9804BOOTS.name=Сапоги школы Волка
+witchercore_9805CHESTPLATE.name=Доспех Темерской Стражи
+witchercore_9805GLOVES.name=Перчатки Темерской Стражи
+witchercore_9805PANTS.name=Штаны Темерской Стражи
+witchercore_9805BOOTS.name=Сапоги Темерской Стражи
+witchercore_9806CHESTPLATE.name=Доспех школы Змеи
+witchercore_9806GLOVES.name=Перчатки школы Змеи
+witchercore_9806PANTS.name=Штаны школы Змеи
+witchercore_9806BOOTS.name=Сапоги школы Змеи
+witchercore_9807CHESTPLATE.name=Тальгарский Доспех
+witchercore_9807GLOVES.name=Тальгарские Перчатки
+witchercore_9807PANTS.name=Тальгарские Штаны
+witchercore_9807BOOTS.name=Тальгарские Сапоги
+witchercore_9808CHESTPLATE.name=Доспех из Каер Морхена
+witchercore_9808GLOVES.name=Охотничьи Перчатки
+witchercore_9808PANTS.name=Охотничьи Штаны
+witchercore_9808BOOTS.name=Охотничьи Сапоги
+witchercore_ALEBARDISTCHESTPLATE.name=Диспех Темерского Алебардиста
+witchercore_ELLANDERCHESTPLATE.name=Элландерская Кираса
+witchercore_REDANCAVALRYMANCHESTPLATE.name=Доспех Реданского Кавалериста
+witchercore_HINDARSFJALLCHESTPLATE.name=Доспех с Хиндарсфьялла
+witchercore_CIDARIANCAVALRYMANCHESTPLATE.name=Доспех Цидарийского Кавалериста
+witchercore_INFANTRYCHESTPLATE.name=Бригантина Грёбаной Пехтуры
+witchercore_CIDARIANCHESTPLATE.name=Цидарийский Комбенезон
+witchercore_TEMERARMYPANTS.name=Темерские Армейские Штаны
+witchercore_LEATHERPANTS.name=Кожаные Штаны
+witchercore_CIDARIANARMYPANTS.name=Цидарийские Армейские Штаны
+witchercore_CLOTH.name=Рубашка
+witchercore_9801STEEL1.name=Стальной меч школы Медведя
+witchercore_9801STEEL2.name=Улучшенный стальной меч школы Медведя
+witchercore_9801STEEL3.name=Отличный стальной меч школы Медведя
+witchercore_9801STEEL4.name=Мастерской стальной меч школы Медведя 
+witchercore_9803STEEL1.name=Стальной меч школы Грифона
+witchercore_9803STEEL2.name=Улучшенный стальной меч школы Грифона
+witchercore_9803STEEL3.name=Отличный стальной меч школы Грифона
+witchercore_9803STEEL4.name=Мастерской стальной меч школы Грифона
+witchercore_9804STEEL1.name=Стальной меч школы Волка
+witchercore_9804STEEL2.name=Улучшенный стальной меч школы Волка
+witchercore_9804STEEL3.name=Отличный стальной меч школы Волка
+witchercore_9804STEEL4.name=Мастерской стальной меч школы Волка
+witchercore_9805STEEL1.name=Веленский меч
+witchercore_9805STEEL2.name=Темерский армейский меч
+witchercore_9805STEEL3.name=Веленский длинный меч
+witchercore_9809STEEL1.name=Нильфгаардский длинный меч
+witchercore_9809STEEL2.name=Столичный нильфгардский меч
+witchercore_MAHAKAM2.name=Мастерской махакамский сигиль
+witchercore_MAHAKAM1.name=Махакамский сигиль
+witchercore_ELVIN.name=Эльфийский клинок
+witchercore_VENGERBERG.name=Венгерберский длинный меч
+witchercore_AEDIRN.name=Аэдирнский длинный меч
+witchercore_MARIBOR.name=Меч из Марибора
+witchercore_IRONY.name=Железный меч
+witchercore_NOVIGRAD1.name=Меч из Новиграда
+witchercore_NOVIGRAD2.name=Новиградский длинный меч
+witchercore_NOVIGRAD3.name=Новиградский армейский меч
+witchercore_ELLANDER.name=Меч из Элландера
+witchercore_OFIR.name=Офирский меч
+witchercore_RUSTYELVIN.name=Ржавый эльфийский клинок
+witchercore_WITCHERYSTEEL.name=Ведьмачий стальной меч
+witchercore_NAZAIR.name=Клинок из Назаира
+witchercore_VIKOVARO.name=Клинок из Виковаро
+witchercore_OLDEST.name=Старинный меч
+witchercore_RUSTY.name=Ржавый меч
+witchercore_DEVINE.name=Девиан
+witchercore_OLDESTELVIN.name=Древний Эльфийский клинок
+witchercore_HARDENED.name=Закалённый стальной меч
+witchercore_9801SILVER1.name=Серебряный меч школы Медведя
+witchercore_9801SILVER2.name=Улучшенный серебряный меч школы Медведя
+witchercore_9801SILVER3.name=Отличный серебряный меч школы Медведя
+witchercore_9801SILVER4.name=Мастерской серебряный меч школы Медведя
+witchercore_9802SILVER1.name=Серебряный меч школы Кота
+witchercore_9802SILVER2.name=Улучшенный серебряный меч школы Кота
+witchercore_9802SILVER3.name=Отличный серебряный меч школы Кота
+witchercore_9802SILVER4.name=Мастерской серебряный меч школы Кота
+witchercore_9803SILVER1.name=Серебряный меч школы Грифона
+witchercore_9803SILVER2.name=Улучшенный серебряный меч школы Грифона
+witchercore_9803SILVER3.name=Отличный серебряный меч школы Грифона
+witchercore_9803SILVER4.name=Мастерской серебряный меч школы Грифона
+witchercore_9804SILVER1.name=Серебряный меч школы Волка
+witchercore_9804SILVER2.name=Улучшенный серебряный меч школы Волка
+witchercore_9804SILVER3.name=Отличный серебряный меч школы Волка
+witchercore_9804SILVER4.name=Мастерской серебряный меч школы Волка
+witchercore_DEITHWEN.name=Deithwen
+witchercore_SILVER2.name=Торлунн
+witchercore_CLAW.name=Судьба
+witchercore_AZUREANGER.name=Лазурный гнев
+witchercore_PHOENIX.name=Феникс
+witchercore_GVIHIR.name=Монстробой
+witchercore_GARHWAL.name=Гарваль
+witchercore_EMMENTAL.name=Эмменталь
+witchercore_ERLICHRAD.name=Эрлерхалрд
+witchercore_SILVER1.name=Посеребрённый меч
+witchercore_WITCHERYSILVER.name=Ведьмачий серебряный меч
+witchercore_TLAREG.name=Рингил
+witchercore_DISGLAIR.name=Дисглаир
+witchercore_GVENNEL.name=Гвен`нэль
+witchercore_ZIRAEL.name=Зираэль
+witchercore_ADDANDEIDTH.name=Addan Deidth
+witchercore_RAWMEAT1.name=Сырая свинина
+witchercore_RAWMEAT2.name=Сырая говядина
+witchercore_RAWFISH1.name=Сырой окунь
+witchercore_WATER.name=Вода
+witchercore_APPLEJUICE.name=Яблочный сок
+witchercore_MORS.name=Морс
+witchercore_PEPPER.name=Перец
+witchercore_APPLE1.name=Яблоко
+witchercore_HONEYCOMB.name=Медовые соты
+witchercore_EGG1.name=Яйцо
+witchercore_MEATSANDWICH1.name=Бутерброд с бужениной
+witchercore_BREAD1.name=Половина хлебца
+witchercore_BLUEBERRIES.name=Корзина черники
+witchercore_DRIEDFRUITS1.name=Унция сухофруктов
+witchercore_GRAPES.name=Гвоздь винограда
+witchercore_GOATMILK.name=Козье молоко
+witchercore_BREAD2.name=Свежая паляница
+witchercore_MEAT1.name=Цыплячья ножка
+witchercore_MEAT2.name=Ножка индейки
+witchercore_FISH1.name=Филе лосося
+witchercore_GOULASH.name=Гуляш
+witchercore_MELON.name=Дыня
+witchercore_MEAT3.name=Говяжья вырезка
+witchercore_MEAT4.name=Свиная отбивная
+witchercore_MEAT5.name=Жареный цыплёнок
+witchercore_MEAT6.name=Запечёная индейка
+witchercore_FISH2.name=Рыба на углях
+witchercore_DRIEDFRUITS2.name=Полфунта сухофруктов
+witchercore_WHITEHONEY.name=Белый мед
+witchercore_SWALLOW.name=Ласточка
+witchercore_GRAMPUS.name=Косатка
+witchercore_CAT.name=Кошка
+witchercore_THUNDER.name=Гром
+darkage.repairkit.arp1=Ремонтный набор ученика-бронника
+darkage.repairkit.arp2=Ремонтный набор подмастерья-бронника
+darkage.repairkit.arp3=Ремонтный набор мастера-бронника
+darkage.repairkit.wrp1=Ремонтный набор ученика-оруженийка
+darkage.repairkit.wrp2=Ремонтный набор подмастерья-оруженийка
+darkage.repairkit.wrp3=Ремонтный набор мастера-оруженийка
 darkage.material.flax=Лён
 darkage.material.flaxCloth=Льняная ткань
 darkage.material.chainmail=Кольчужная сетка
@@ -239,7 +227,7 @@ darkage.material.ranog=Раног
 darkage.material.skorotsel=Скороцель
 darkage.material.shibaltsyMushrooms=Грибы-шибальцы
 darkage.material.verbena=Вербена
-darkage.material.whiteMyrtlePetals=Лепестки белого мирта
+darkage.material.whrtlePetals=Лепестки белого мирта
 darkage.material.volkoboy=Волкобой
 darkage.material.steelCandlestick=Стальной подсвечник
 darkage.material.poison=Яд
@@ -505,3 +493,7 @@ darkage.material.cinnabar=Киноварь
 darkage.material.quibette=Квабрит
 darkage.material.rebis=Ребис
 darkage.material.rubedo=Рубедо
+darkage.money.OREN=Темерский орен
+darkage.money.oren100=Мешочек со ста оренами
+darkage.money.oren1000=Шкатулка с тысячей оренов
+darkage.material.blueprint1=Чертёж
